--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "vue": "^3.4.19"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^2.8.0",
     "@vitejs/plugin-vue": "^5.0.4",
+    "eslint": "^8.57.0",
     "typescript": "^5.2.2",
     "vite": "^5.1.4",
     "vue-tsc": "^1.8.27"
