--- a/package.json
+++ b/package.json
@@ -1,22 +1,58 @@
 {
-  "name": "vitetify",
-  "private": true,
-  "version": "0.0.0",
   "type": "module",
+  "private": true,
+  "packageManager": "pnpm@8.15.4",
   "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc && vite build",
+    "build": "vite build",
+    "dev": "vite --port 3333 --open --mode stag",
+    "dev:stag": "vite --port 3333 --open --mode stag",
+    "dev:prod": "vite --port 3333 --open --mode prod",
+    "lint": "eslint .",
+    "typecheck": "vue-tsc --noEmit",
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.4.19"
+    "@vee-validate/zod": "^4.12.6",
+    "@vueuse/core": "^10.9.0",
+    "defu": "^6.1.4",
+    "ofetch": "^1.3.3",
+    "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^3.2.1",
+    "vee-validate": "^4.12.6",
+    "vue": "^3.4.21",
+    "vue-i18n": "9",
+    "vue-router": "^4.3.0",
+    "zipson": "^0.2.12",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.8.0",
+    "@antfu/eslint-config": "^2.6.4",
+    "@iconify-json/carbon": "^1.1.30",
+    "@intlify/unplugin-vue-i18n": "^3.0.1",
+    "@types/node": "^20.11.23",
+    "@unocss/eslint-config": "^0.58.5",
+    "@unocss/eslint-plugin": "^0.58.5",
+    "@unocss/reset": "^0.58.5",
     "@vitejs/plugin-vue": "^5.0.4",
     "eslint": "^8.57.0",
-    "typescript": "^5.2.2",
+    "eslint-plugin-format": "^0.1.0",
+    "lint-staged": "^15.2.2",
+    "pnpm": "^8.15.4",
+    "simple-git-hooks": "^2.10.0",
+    "typescript": "^5.3.3",
+    "unocss": "^0.58.5",
+    "unplugin-auto-import": "^0.17.5",
+    "unplugin-vue-components": "^0.26.0",
+    "unplugin-vue-router": "^0.8.4",
     "vite": "^5.1.4",
+    "vite-plugin-vue-layouts": "^0.11.0",
+    "vite-plugin-vuetify": "^2.0.3",
     "vue-tsc": "^1.8.27"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "pnpm lint-staged"
+  },
+  "lint-staged": {
+    "*": "eslint --fix"
   }
 }
