--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "@vee-validate/zod": "^4.12.6",
     "@vueuse/core": "^10.9.0",
+    "@vueuse/integrations": "^10.9.0",
     "defu": "^6.1.4",
+    "nprogress": "^0.2.0",
     "ofetch": "^1.3.3",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
