--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev:stag": "vite --port 3333 --open --mode stag",
     "dev:prod": "vite --port 3333 --open --mode prod",
     "lint": "eslint .",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo 'No test for now'",
     "typecheck": "vue-tsc --noEmit",
     "preview": "vite preview"
   },
