--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vueuse/core": "^10.9.0",
     "@vueuse/integrations": "^10.9.0",
     "defu": "^6.1.4",
+    "jwt-decode": "3.1.2",
     "nprogress": "^0.2.0",
     "ofetch": "^1.3.3",
     "pinia": "^2.1.7",
@@ -25,6 +26,7 @@
     "vue": "^3.4.21",
     "vue-i18n": "9",
     "vue-router": "^4.3.0",
+    "vue3-toastify": "^0.2.1",
     "zipson": "^0.2.12",
     "zod": "^3.22.4"
   },
@@ -32,6 +34,7 @@
     "@antfu/eslint-config": "^2.6.4",
     "@iconify-json/carbon": "^1.1.30",
     "@intlify/unplugin-vue-i18n": "^3.0.1",
+    "@mdi/font": "^7.4.47",
     "@types/node": "^20.11.23",
     "@unocss/eslint-config": "^0.58.5",
     "@unocss/eslint-plugin": "^0.58.5",
